tests/compile_failure/src/Core/NotNull.defaulted.fail.cpp
#include <Phi/Core/NotNull.hpp>

int main()
{
    phi::NotNull<int*> p;
}
